--- a/src/forecasting/railway.toml
+++ b/src/forecasting/railway.toml
@@ -1,8 +1,8 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "npm --prefix ../.. run build:forecasting"
+buildCommand = "npm run build"
 
 [deploy]
-startCommand = "npm --prefix ../.. run start:forecasting"
+startCommand = "npm run start"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
